--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.22.0",
     "bootstrap": "^5.1.3",
     "firebase": "^9.6.1",
+    "firebase-tools": "^10.0.1",
     "login": "^0.8.0",
     "node": "^16.10.0",
     "prop-types": "^15.7.2",
@@ -18,7 +19,6 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.5",
-    "react-redux-firebase": "^3.11.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
     "redux": "^4.1.2",
