--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.22.0",
     "bootstrap": "^5.1.3",
+    "classnames": "^2.3.1",
     "firebase": "^9.6.1",
     "firebase-tools": "^10.0.1",
     "login": "^0.8.0",
